--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
   padding: 25px 80px 25px 80px;
   font-size: 20px;
   font-weight: 600;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0.3);
   z-index: 100;
 }
 #main-nav #logo {
@@ -10,9 +10,24 @@
   max-height: 100px;
 }
 
+#social-button-row {
+  padding-top: 20px;
+}
+
 .filler {
   height: 1000px;
   background-color: red;
+}
+
+.footer {
+  background-color: black;
+  color: white;
+}
+.footer .nav-link {
+  color: white;
+}
+.footer .nav-link :hover {
+  color: grey;
 }
 
 /*# sourceMappingURL=index.css.map */
