--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,7 +2,7 @@
     padding: 25px 80px 25px 80px;
     font-size: 20px;
     font-weight: 600;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 100;
 
     #logo {
@@ -11,7 +11,24 @@
     }
 }
 
+#social-button-row {
+    padding-top: 20px;
+}
+
 .filler {
     height: 1000px;
     background-color: red;
+}
+
+.footer {
+    background-color: black;
+    color: white;
+
+    .nav-link {
+        color: white;
+
+        :hover {
+            color: grey;
+        }
+    }
 }
