--- a/styles/index.css
+++ b/styles/index.css
@@ -1,14 +1,18 @@
-#see-you-section, #contact-section, #meet-the-team, #about-section {
+#see-you-section, #meet-the-team, #awards-section, #charity-section, #trailer, #past-speakers, #about-section {
   padding: 40px 40px 40px 40px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #main-nav {
-  padding: 15px 60px 15px 60px;
-  font-size: 17px;
+  padding: 10px 60px 10px 60px;
+  font-size: 16px;
   font-weight: 600;
   z-index: 100;
-  background-color: rgba(0, 0, 0, 0.15);
-  transition: background-color 0.5s ease 0s;
+  background-color: rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease 0s;
 }
 #main-nav .dropdown-menu {
   background-color: rgba(0, 0, 0, 0.15);
@@ -19,27 +23,86 @@
 #main-nav .dropdown-item:hover {
   background-color: rgba(44, 43, 43, 0.4);
 }
+#main-nav .dropdown:hover > .dropdown-menu {
+  display: block;
+}
 #main-nav a {
   margin-right: 5px;
 }
 #main-nav #logo {
-  max-width: 100px;
-  max-height: 100px;
+  max-width: 90px;
+  max-height: 90px;
+}
+
+#theme-section img {
+  max-height: 800px;
 }
 
 #about-section {
   height: 300px;
   background-color: #e2e0e0;
+  display: flex;
+}
+#about-section .about-heading {
+  width: 40%;
+  background-color: red;
+}
+#about-section .about-details {
+  width: 60%;
+  background-color: green;
+  padding: 0 55px 0 55px;
+}
+#about-section .about-details p {
+  padding-top: 10px;
+}
+#about-section .column {
+  flex: 50%;
+}
+
+#past-speakers {
+  background-color: antiquewhite;
+}
+
+#trailer {
+  background-color: goldenrod;
+}
+
+#charity-section {
+  height: 300px;
+  background-color: #e2e0e0;
+  display: flex;
+}
+#charity-section .charity-heading {
+  width: 40%;
+  background-color: red;
+}
+#charity-section .charity-details {
+  width: 60%;
+  background-color: green;
+  padding: 0 55px 0 55px;
+}
+#charity-section .charity-details p {
+  padding-top: 10px;
+}
+
+#awards-section {
+  background-color: yellowgreen;
 }
 
 #meet-the-team {
   padding: 30px 0px 30px 0px;
+  background-color: #e62954;
+}
+#meet-the-team h1 {
+  margin-bottom: 15px;
 }
 #meet-the-team #team-photo-section {
-  padding: 15px 0px 20px 0px;
+  padding: 15px 233px 0px 233px;
+  min-height: 300px;
 }
 #meet-the-team #team-photo-section .profile {
-  margin-right: 40px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 #meet-the-team #team-photo-section .profile img {
   max-width: 180px;
@@ -56,9 +119,13 @@
 #meet-the-team a {
   position: relative;
   text-decoration: none;
+  color: #000;
   padding-bottom: 8px;
   margin-right: 10px;
   margin-left: 10px;
+}
+#meet-the-team a:focus {
+  color: red;
 }
 #meet-the-team a:before, #meet-the-team a:after {
   content: "";
@@ -90,20 +157,18 @@
   transition: transform 0s 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275), opacity 0s 0.2s;
 }
 
-#contact-section {
-  height: 300px;
-  background-color: #e2e0e0;
-}
-
 #see-you-section {
-  height: 350px;
+  height: 400px;
+  padding-top: 90px;
+  background-color: #031e63;
+  color: #fff;
 }
 #see-you-section .btn {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 #main-footer {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: black;
   color: white;
   font-size: 18px;
   padding: 0px 30px 0px 30px;
@@ -112,16 +177,21 @@
 #main-footer #ppia-text {
   padding: 3vh;
 }
+#main-footer a {
+  transition: all 0.1s ease-in-out;
+}
+#main-footer a:hover {
+  transform: scale(1.15);
+  color: #d8d7d7;
+}
 #main-footer .nav {
   padding: 2vh 0 2vh 0;
+  transition: all 0.1s ease-in-out;
 }
 #main-footer .nav .nav-link {
   color: white;
   font-size: 20px;
   margin-right: 20px;
-}
-#main-footer .nav :hover {
-  color: grey;
 }
 
 /*# sourceMappingURL=index.css.map */
