--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,13 +7,17 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
     padding: 40px 40px 40px 40px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 #main-nav {
-    padding: 15px 60px 15px 60px;
-    font-size: 17px;
+    padding: 10px 60px 10px 60px;
+    font-size: 16px;
     font-weight: 600;
     z-index: 100;
-    background-color: rgba(0, 0, 0, 0.15);
-    transition: background-color 0.5s ease 0s;
+    background-color: rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease 0s;
 
     .dropdown-menu {
         background-color: rgba(0, 0, 0, 0.15);
@@ -27,30 +31,104 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
             background-color: rgba(44, 43, 43, 0.4);
         }
     }
+
+    .dropdown:hover > .dropdown-menu {
+        display: block;
+    }
     
     a {
         margin-right: 5px;
     }
 
     #logo {
-        max-width: 100px;
-        max-height: 100px;
+        max-width: 90px;
+        max-height: 90px;
     }
 
+}
+
+#theme-section {
+    img {
+        max-height: 800px;
+    }
 }
 
 #about-section {
     @extend %section;
     height: 300px;
-    background-color: rgb(226, 224, 224); 
+    background-color: rgb(226, 224, 224);
+    display: flex;
+
+    .about-heading {
+        width: 40%;
+        background-color: red;
+    }
+
+    .about-details {
+        width: 60%;
+        background-color: green;
+        padding: 0 55px 0 55px;
+
+        p {
+            padding-top: 10px;
+        }
+    }
+
+    .column {
+        flex: 50%;
+    }
+}
+
+#past-speakers {
+    @extend %section;
+    background-color: antiquewhite;
+}
+
+#trailer {
+    @extend %section;
+    background-color: goldenrod;
+}
+
+#charity-section {
+    @extend %section;
+    height: 300px;
+    background-color: rgb(226, 224, 224);
+    display: flex;
+
+    .charity-heading {
+        width: 40%;
+        background-color: red;
+    }
+
+    .charity-details {
+        width: 60%;
+        background-color: green;
+        padding: 0 55px 0 55px;
+
+        p {
+            padding-top: 10px;
+        }
+    }
+}
+
+#awards-section {
+    @extend %section;
+
+    background-color: yellowgreen;
 }
 
 #meet-the-team {
     @extend %section;
     padding: 30px 0px 30px 0px;
+    background-color: #e62954;
+
+    h1 {
+        margin-bottom: 15px;
+    }
 
     #team-photo-section {
-        padding: 15px 0px 20px 0px;
+        padding: 15px 233px 0px 233px;
+        min-height: 300px;
 
         .profile {
             img {
@@ -66,8 +144,10 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
 
             h6 {
                 color: grey;
+            
             }
-            margin-right: 40px;
+            margin-left: 30px;
+            margin-right: 30px;
         }
     }
 
@@ -76,9 +156,14 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
     a {
         position: relative;
         text-decoration: none;
+        color: #000;
         padding-bottom: 8px;
         margin-right: 10px;
         margin-left: 10px;
+
+        &:focus {
+            color: red;
+        }
 
         &:before, &:after {
             content: '';
@@ -113,23 +198,22 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
     }
 }
 
-#contact-section {
-    @extend %section;
-    height: 300px;
-    background-color: rgb(226, 224, 224); 
-}
 
 #see-you-section {
     @extend %section;
-    height: 350px;
+    height: 400px;
+    padding-top: 90px;
+
+    background-color: #031e63;
+    color: #fff;
 
     .btn {
-        margin-top: 30px;
+        margin-top: 10px;
     }
 }
 
 #main-footer {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0);
     color: white;
     font-size: 18px;
     padding: 0px 30px 0px 30px;
@@ -138,18 +222,24 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.320, 1.275);
     #ppia-text {
         padding: 3vh;
     }
+
+    a {
+        transition: all 0.1s ease-in-out;
+    }
+
+    a:hover {
+        transform: scale(1.15);
+        color: #d8d7d7;
+    }
     
     .nav {
         padding: 2vh 0 2vh 0;
+        transition: all 0.1s ease-in-out;
 
         .nav-link {
             color: white;
             font-size: 20px;
             margin-right: 20px;
-        }
-
-        :hover {
-            color: grey;
         }
     }
 }
