--- a/styles/index.scss
+++ b/styles/index.scss
@@ -110,7 +110,7 @@ html {
 
     .event-social-column {
         width: 40%;
-        line-height: 100px;
+        line-height: 12vh;
 
         #social-column {
             list-style: none;
@@ -141,7 +141,7 @@ html {
     .venue-time {
         width: 60%;
         margin-left: 5vw;
-        padding-top: 50px;
+        padding-top: 6vh;
         // background-color: red;
 
         .date {
